--- a/Brain_Tumor_Classification.ipynb
+++ b/Brain_Tumor_Classification.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Brain-Tumor-Classification.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -46,7 +45,7 @@
         "from tqdm import tqdm\n",
         "import seaborn as sns\n",
         "import numpy as np\n",
-        "import itertools \n",
+        "import itertools\n",
         "import datetime\n",
         "\n",
         "import cv2\n",
@@ -63,7 +62,7 @@
       },
       "source": [
         "## Data Preperation\n",
-        " \n",
+        "\n",
         "1.   Load all training and testing data\n",
         "\n",
         "2.   Pre-processing images (apply opencv functions : bilateralFilter,applyColorMap,resize)\n",
@@ -111,7 +110,7 @@
         "        image = cv2.resize(image, (image_size, image_size)) # resize images into 150*150.\n",
         "        x_train.append(image)\n",
         "        y_train.append(labels.index(label))\n",
-        "    \n",
+        "\n",
         "    testPath = os.path.join('drive/MyDrive/keras/brain-tumor/Testing',label)\n",
         "    for file in tqdm(os.listdir(testPath)):\n",
         "        image = cv2.imread(os.path.join(testPath, file),0)\n",
@@ -200,7 +199,7 @@
         "outputId": "49fe977b-7d39-47bb-fd4f-b894e3c4a184"
       },
       "source": [
-        "x_train, y_train = shuffle(x_train,y_train, random_state=42) \n",
+        "x_train, y_train = shuffle(x_train,y_train, random_state=42)\n",
         "\n",
         "y_train = tf.keras.utils.to_categorical(y_train) #One Hot Encoding on the labels\n",
         "y_test = tf.keras.utils.to_categorical(y_test)\n",
@@ -239,7 +238,7 @@
         "\n",
         "# ImageDataGenerator transforms each image in the batch by a series of random translations, rotations, etc.\n",
         "datagen = ImageDataGenerator(\n",
-        "    rotation_range=10,                        \n",
+        "    rotation_range=10,\n",
         "    width_shift_range=0.05,\n",
         "    height_shift_range=0.05,\n",
         "    horizontal_flip=True)\n",
@@ -733,7 +732,7 @@
         "\n",
         "\n",
         "class_names = list(labels)\n",
-        "def plot_to_image(figure):    \n",
+        "def plot_to_image(figure):\n",
         "    buf = io.BytesIO()\n",
         "    plt.savefig(buf, format='png')\n",
         "    plt.close(figure)\n",
@@ -744,35 +743,35 @@
         "\n",
         "    return digit\n",
         "\n",
-        "def plot_confusion_matrix(cm, class_names): \n",
-        "    figure = plt.figure(figsize=(8, 8)) \n",
-        "    plt.imshow(cm, interpolation='nearest', cmap=plt.cm.Accent) \n",
-        "    plt.title(\"Confusion matrix\") \n",
-        "    plt.colorbar() \n",
-        "    tick_marks = np.arange(len(class_names)) \n",
-        "    plt.xticks(tick_marks, class_names, rotation=45) \n",
+        "def plot_confusion_matrix(cm, class_names):\n",
+        "    figure = plt.figure(figsize=(8, 8))\n",
+        "    plt.imshow(cm, interpolation='nearest', cmap=plt.cm.Accent)\n",
+        "    plt.title(\"Confusion matrix\")\n",
+        "    plt.colorbar()\n",
+        "    tick_marks = np.arange(len(class_names))\n",
+        "    plt.xticks(tick_marks, class_names, rotation=45)\n",
         "    plt.yticks(tick_marks, class_names)\n",
         "\n",
-        "    cm = np.around(cm.astype('float') / cm.sum(axis=1)[:, np.newaxis], decimals=2)  \n",
-        "    threshold = cm.max() / 2. \n",
+        "    cm = np.around(cm.astype('float') / cm.sum(axis=1)[:, np.newaxis], decimals=2)\n",
+        "    threshold = cm.max() / 2.\n",
         "\n",
-        "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):   \n",
-        "        color = \"white\" if cm[i, j] > threshold else \"black\"   \n",
-        "        plt.text(j, i, cm[i, j], horizontalalignment=\"center\", color=color)  \n",
-        "    \n",
-        "    plt.tight_layout() \n",
-        "    plt.ylabel('True label') \n",
-        "    plt.xlabel('Predicted label') \n",
+        "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+        "        color = \"white\" if cm[i, j] > threshold else \"black\"\n",
+        "        plt.text(j, i, cm[i, j], horizontalalignment=\"center\", color=color)\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.ylabel('True label')\n",
+        "    plt.xlabel('Predicted label')\n",
         "\n",
         "    return figure\n",
         "\n",
-        "# Following function will make predictions from the model and log the confusion matrix as an image. \n",
+        "# Following function will make predictions from the model and log the confusion matrix as an image.\n",
         "def log_confusion_matrix(epoch, logs):\n",
         "    predictions = np.argmax(model.predict(x_test), axis=1)\n",
         "    cm = confusion_matrix(np.argmax(y_test,axis=1), predictions)\n",
         "    figure = plot_confusion_matrix(cm, class_names=class_names)\n",
         "    cm_image = plot_to_image(figure)\n",
-        "    \n",
+        "\n",
         "    with file_writer_cm.as_default():\n",
         "        tf.summary.image(\"Confusion Matrix\", cm_image, step=epoch)\n",
         "\n",
@@ -951,7 +950,7 @@
         "plt.legend(['Training Accuracy', 'Validation Accuracy'],fontsize=18)\n",
         "plt.xlabel('Epochs ',fontsize=16)\n",
         "plt.ylabel('Accuracy',fontsize=16)\n",
-        "plt.title('Accuracy Curves',fontsize=16)   \n",
+        "plt.title('Accuracy Curves',fontsize=16)\n",
         "plt.show()"
       ],
       "execution_count": null,
